<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mayeah</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_message">消息</string>
    <string name="str_post">帖子</string>
    <string name="str_information">&#160;&#160;我的资料</string>
    <string name="str_order">&#160;&#160;我的订单</string>
    <string name="str_score">&#160;&#160;我的积分</string>
    <string name="str_collection">&#160;&#160;我的收藏</string>
    <string name="str_feedback">&#160;&#160;我的反馈</string>
    <string name="str_be_beautiful">马上变美</string>
    <string name="str_call_content">立即拨打美嘢客服热线\n告别不自信的昨天！即刻美丽!</string>
    <string name="str_call">拨打</string>
    <string name="str_cancel">取消</string>

</resources>
